Fixed Timeline's "Remove Frames/Columns and Pull" Actions.

BUG: 394842

Previously these actions failed to remove the last frame of the
selection if the next following frame was empty. Fixed now!

Revied by Dmitry. Help from Eoin. Thanks as always!